# Messenger-ALEsha

./: .clangd  .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.yml
.github/workflows/: ci.yml
client/: CMakeLists.txt  Dockerfile  test_docker.cpp
client/include/: AuthManager.hpp  ChatManager.hpp  ConnectionManager.hpp  MediaCacheManager.hpp  StateManager.hpp
client/output/: client_docker
client/src/: AuthManager.cpp  ChatArea.qml  Sidebar.qml  StateManager.cpp  chat.qml  main.cpp  main.qml  sign_in.qml  sign_up.qml
client/src/core/: AuthManager.cpp  ChatManager.cpp  ConnectionManager.cpp  MediaCacheManager.cpp  MediaManager.cpp  StateManager.cpp  main.cpp
client/src/ui/: ChatArea.qml  Sidebar.qml  chat.qml  main.qml  sign_in.qml  sign_up.qml
client/tests/: test_auth_manager.cpp  test_chat_manager.cpp  test_state_manager.cpp
client/tests/mocks/: FakeNetworkReply.hpp  MockConnectionManager.hpp
common/include/models/: channel.hpp  chat.hpp  post.hpp  reaction.hpp
docs/: database_api.md  design_document_alyosha.md  server_api.md
server/: .dockerignore  CMakeLists.txt  Dockerfile  config.json
server/alesha_server_app/: CMakeLists.txt  Dockerfile  config.json  index.html  main.cc
server/alesha_server_app/test/: CMakeLists.txt
server/controllers/: ChatController.cc  ChatController.h  ServerWebSocketController.cc  ServerWebSocketController.h  TestServerController.cc  TestServerController.h  UserController.cc  api_v1_ChatWebSocket.cc  api_v1_auth.cc  api_v1_auth.h  api_v1_chats.h  api_v1_users.cc  api_v1_users.h
server/drogon/: .gitignore
server/filters/: api_v1_IpFilter.cc
server/include/dto/: ChatServiceDtos.hpp  ServicesDtoBase.hpp  UserServiceDtos.hpp
server/include/models/: attachment.hpp  channel.hpp  chat.hpp  message.hpp  post.hpp  reaction.hpp  session.hpp  user.hpp
server/include/repositories/: ChatRepository.hpp  MessageRepository.hpp  UserRepository.hpp
server/include/utils/: controller_utils.hpp  orm_utils.hpp  server_exceptions.hpp  server_response_macro.hpp
server/services/: ChatService.cpp  S3Service.cpp  UserService.cpp  UserService.hpp
server/sql/: 001_initial_schema.sql
server/src/: bcrypt.cpp  blowfish.cpp  main.cc  main.cpp
server/src/repositories/: AttachmentRepository.cpp  ChatRepository.cpp  MessageRepository.cpp  UserRepository.cpp
server/src/utils/: controller_utils.cpp
server/tests/: test_chat_repository.cpp  test_message_repository.cpp  test_placeholder.cpp  test_user_repository.cpp  users_controller_test.cpp
server/tests/controllers/: test_end_to_end.cpp
server/tests/fixtures/: ChatTestFixture.hpp  ControllerTestFixture.hpp  DbTestFixture.hpp  MessageTestFixture.hpp  UserTestFixture.hpp
server/tests/mocks/: MockChatRepository.hpp  MockMessageRepository.hpp  MockUserRepositrory.hpp
server/tests/service_unit_tests/: user_service_test.cpp
server/tests/services/: test_user_serivce.cpp
